# QtGUI

./: .gitignore
GPURentalApp/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
GPURentalApp/image/: AppIcon.icns
GpuClient/: CMakeLists.txt  GpuClient_zh_TW.ts  glass.qss  homewindow.cpp  homewindow.h  homewindow.ui  machine.h  machineprovider.h  machineprovider_http.cpp  machineprovider_http.h  machineprovider_tcp.cpp  machineprovider_tcp.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_back_up.cpp  missionuploadwindow.cpp  missionuploadwindow.h  missionuploadwindow.ui  providewindow.cpp  providewindow.h  providewindow.ui  rentwindow.cpp  rentwindow.h  rentwindow.ui  resources.qrc
GpuServer/: .gitignore  CMakeLists.txt  main.cpp
